# Markup

./: .gitignore  CONTRIBUTING.md  PRIVACY.md  README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  snapshots.csv  tailwind.config.js  vite.config.ts  vitest.config.ts
.claude/skills/ship-ios-testflight/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  cross-platform-bundle.yml  cross-platform-spike.yml  metrics.yml  pages.yml  release.yml
docs/: CROSS-PLATFORM-HARDENING.md  GTM-LAUNCH-PLAN.md  GTM-SCALE-PLAN.md  HANDOFF.md  HERO-GIF.md  LAUNCH-POSTS.md  PRODUCT-DIRECTION.md  README.md  RELEASE-PLAN.md  REVIEW-2026-06.md  SOCIAL-PREVIEW.md  STATUS.md  TODO.md  USAGE.md  V2_CANVAS.md  awesome-list-pr.md  release-notes-v0.3.0.md  release-notes-v0.4.0.md  release-notes-v0.4.1.md  release-notes-v0.5.0.md  release-notes-v0.5.1.md  release-notes-v0.5.2.md  release-notes-v0.5.3.md  release-notes-v0.5.4.md  release-notes-v0.5.5.md  release-notes-v0.6.0.md  release-notes-v0.6.1.md  release-notes-v0.6.2.md  release-notes-v0.7.0.md  release-notes-v0.8.0.md  release-notes-v1.0.0.md  release-notes-v1.0.1.md
docs/app-store/: HANDOFF.md  MAS-publishing-plan.md  README.md  ios-submission.md  launch-1.0-checklist.md  listing-copy.md  privacy-label-and-review.md  signing-setup.md
docs/app-store/reviewer-sample-vault/: README.md  features.md  welcome.md
docs/assets/: make-social-card.py
docs/decisions/: ADR-001-tech-stack.md  ADR-002-distribution.md  ADR-003-positioning-and-distribution.md  ADR-004-app-store-1.0.md
docs/design/: 00-project-overview.md  01-architecture.md  02-mvp-features.md  03-roadmap.md  04-obsidian-redesign-plan.md  05-html-support.md  06-github-roundtrip.md  mockup-obsidian-redesign.html
docs/design/ios/: 00-ios-app-design.md  01-release-mechanism.md  02-html-support.md  03-github-primary-vault.md  03-implementation-status.md
docs/marketing/: README.md  alternativeto-entry.md  build-launch-video.sh  make-cards.py  youtube-meta.md
docs/marketing/build-in-public/: README.md  github-roundtrip.md
docs/marketing/seo/: README.md  markup-vs-typora.md  obsidian-alternative-macos.md  read-github-docs-offline.md
docs/metrics/: README.md  snapshots.csv
docs/research/: 01-typora-analysis.md  02-opensource-libraries.md  03-mac-framework-comparison.md  04-performance-strategies.md  05-spike-results.md  INDEX.md  spike-0.1-manual-test.md
e2e/: app.spec.ts  interactions.spec.ts  render-resilience.spec.ts  tauri-mock.ts
ios/: README.md  RELEASE.md  app.json  eas.json  ios  package-lock.json  package.json
ios/MarkupApp/: ExportOptions.plist  Info.plist
ios/MarkupApp/MarkupApp/: Info.plist  (+27 more)
ios/MarkupApp/MarkupApp.xcodeproj/: project.pbxproj
ios/MarkupKit/: Package.swift
ios/scripts/: add-to-external-testing.py  archive-and-upload.sh  build-ios.sh  derive-build-number.sh
marketing/app-store/: README.md  listing.md  privacy-and-review.md
marketing/scripts/: make-screenshots.py
scripts/: build-mas.sh  dmg-settings.py  gen-placeholder-icons.py  gen-test-doc.py  metrics-snapshot.sh  sign-and-notarize.sh
site/: README.md  index.html
src/: App.tsx  index.css  main.tsx  store.settings.test.ts  store.test.ts  store.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.mas.plist  Entitlements.plist  tauri.conf.json  tauri.mas.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: authorized.rs  bookmark.rs  commands.rs  commands_locale.rs  commands_vault.rs  commands_window.rs  error.rs  github.rs  github_vault.rs  i18n.rs  index.rs  lib.rs  main.rs  menu.rs  recent.rs  scanner.rs  token_store.rs  vault.rs  watcher.rs
src-tauri/tests/: commands.rs  spike_03.rs
src/components/: AboutDialog.test.tsx  AboutDialog.tsx  BacklinksPanel.test.tsx  BacklinksPanel.tsx  BookmarksPane.test.tsx  BookmarksPane.tsx  CanvasAnchorHandles.tsx  CanvasEdgesLayer.test.tsx  CanvasEdgesLayer.tsx  CanvasInteractionLayer.tsx  CanvasNodeFile.test.tsx  CanvasNodeFile.tsx  CanvasNodeGroup.test.tsx  CanvasNodeGroup.tsx  CanvasNodeLink.test.tsx  CanvasNodeLink.tsx  CanvasNodeText.test.tsx  CanvasNodeText.tsx  CanvasTextOverlay.test.tsx  CanvasTextOverlay.tsx  CanvasView.autosave.test.tsx  CanvasView.test.tsx  CanvasView.tsx  CanvasView.undo.test.tsx  CommandPalette.test.tsx  CommandPalette.tsx  DocPager.test.tsx  DocPager.tsx  Editor.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FileTree.test.tsx  FileTree.tsx  FindBar.test.tsx  FindBar.tsx  GitHubOpenDialog.test.tsx  GitHubOpenDialog.tsx  GraphView.tsx  HtmlView.tsx  Onboarding.tsx  (+37 more)
src/hooks/: useCanvasStoreCleanup.test.ts  useCanvasStoreCleanup.ts  useCustomTheme.test.ts  useCustomTheme.ts  useEditorInteractions.ts  useIndexStoreSync.test.ts  useIndexStoreSync.ts  useLargeFileGuard.test.ts  useLargeFileGuard.ts  usePinnedTabsSync.test.ts  usePinnedTabsSync.ts  useScrollMemory.test.ts  useScrollMemory.ts  useSessionPersistence.test.ts  useSessionPersistence.ts  useSettingsPersistence.test.ts  useSettingsPersistence.ts  useUiPrefPersistence.test.ts  useUiPrefPersistence.ts  useWindowFileDrop.ts
src/lib/: active-source-view.test.ts  active-source-view.ts  block-extract.test.ts  block-extract.ts  block-index-store.ts  bookmarks.test.ts  bookmarks.ts  breadcrumb.test.ts  breadcrumb.ts  build-flags.ts  canvas-drag.test.ts  canvas-drag.ts  canvas-edge-geom.test.ts  canvas-edge-geom.ts  canvas-file-resolve.test.ts  canvas-file-resolve.ts  canvas-format.test.ts  canvas-format.ts  canvas-ids.test.ts  canvas-ids.ts  canvas-md-render.test.ts  canvas-md-render.ts  canvas-path.test.ts  canvas-path.ts  canvas-registry.test.ts  canvas-registry.ts  canvas-select.test.ts  canvas-select.ts  canvas-store.test.ts  canvas-store.ts  canvas-viewport.test.ts  canvas-viewport.ts  check-update.ts  cm-auto-close.test.ts  cm-auto-close.ts  cm-line-ops.test.ts  cm-line-ops.ts  cm-list-continue.test.ts  cm-list-continue.ts  cm-section.test.ts  (+100 more)
src/test/: setup.ts
(+71 files in other folders)
