[package]
name = "markup"
version = "0.5.5"
description = "High-performance Markdown editor for macOS"
authors = ["appkon"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "markup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "sync", "time", "process"] }

# Spike 0.3: vault management
walkdir = "2"
notify = "7"
notify-debouncer-full = "0.4"
tantivy = "0.24"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Markdown parser (Rust-side, for indexing snippets and exports)
comrak = { version = "0.40", default-features = false, features = ["syntect"] }

# Security-scoped bookmark persistence (base64-encode the bookmark blob)
base64 = "0.22"

# macOS security-scoped bookmarks — lets a sandboxed (Mac App Store) build
# re-access the user's vault folder across launches. No-op on other OSes.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSURL",
    "NSString",
    "NSData",
    "NSError",
    "NSArray",
] }

[dev-dependencies]
tempfile = "3"
criterion = "0.7"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
