[package]
name = "markup"
version = "1.0.1"
description = "High-performance Markdown editor for macOS"
authors = ["appkon"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "markup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "sync", "time", "process"] }

# GitHub OAuth device-flow token exchange (github.com/login endpoints don't
# send CORS headers, so the exchange must run here, not in the webview).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# GitHub access token at rest: the OS credential store instead of the webview's
# localStorage (any script running in the webview can read localStorage). The
# backend is platform-specific and declared per-target below (Keychain on macOS,
# Credential Manager on Windows, Secret Service on Linux).

# Spike 0.3: vault management
walkdir = "2"
notify = "8"
notify-debouncer-full = "0.7"
tantivy = "0.26"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Markdown parser (Rust-side, for indexing snippets and exports)
comrak = { version = "0.52", default-features = false, features = ["syntect"] }

# HTML sanitiser for the export/preview pipeline. comrak runs with unsafe_
# (raw HTML passthrough), so the rendered body is cleaned of <script>, event
# handlers, and dangerous URL schemes before being wrapped into a standalone
# document that opens in an external browser (where there is no CSP).
ammonia = "4"

# Security-scoped bookmark persistence (base64-encode the bookmark blob)
base64 = "0.22"

# B301: extract GitHub repo zipballs into a local vault working copy.
# Deflate-only — GitHub zipballs never use the other methods.
zip = { version = "8", default-features = false, features = ["deflate-flate2-zlib-rs"] }

# B305: git blob SHA-1 of local files, to detect which differ from the
# manifest (the same id GitHub reports per blob) for "propose changes".
sha1 = "0.11"

# Native "move to Trash" — replaces an osascript→Finder round-trip, so trashing
# a file no longer needs an Automation-access prompt and there's no AppleScript
# string to escape.
trash = "5"

# Credential-store backend for the GitHub token (see the keyring comment above).
# macOS → Security.framework Keychain.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }
# macOS security-scoped bookmarks — lets a sandboxed (Mac App Store) build
# re-access the user's vault folder across launches. No-op on other OSes.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSURL",
    "NSString",
    "NSData",
    "NSError",
    "NSArray",
] }

# Windows → Credential Manager (wincred).
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

# Windows/Linux deliver "Open With" / double-click as a process launch argument
# (not a RunEvent::Opened event like macOS). single-instance focuses the running
# window and forwards the argv instead of spawning a second copy.
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

# Linux → Secret Service (GNOME Keyring / KWallet) over D-Bus, with pure-Rust
# crypto so there's no OpenSSL system dependency. Requires a running Secret
# Service daemon at runtime (headless/server users need a fallback — tracked in
# docs/CROSS-PLATFORM-HARDENING.md).
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = [
    "sync-secret-service",
    "crypto-rust",
] }

[dev-dependencies]
tempfile = "3"
criterion = "0.8"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
